--- a/CV.css
+++ b/CV.css
@@ -1,7 +1,7 @@
 body{
     margin: 40px;
     padding: 50px;
-    background-color: rgb(61, 58, 109);
+    background-color: rgb(119, 118, 112);
     border: 6px solid black;
 }
 
@@ -10,86 +10,91 @@ body{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 25px;
     font-weight: bolder;
-    color:crimson;
+    color:rgb(3, 0, 1);
     width: 35%;
     margin: 20px 20px 20px 0px;
-    background-color: white;
+    background-color: rgb(255, 238, 0);
     border: 6px solid black;
     border-radius: 30px;
+
 }
 
-#Yo{
-    font-size: 22px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: white;
+#edad{
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bolder;
+    font-size: 40px;
+    padding: 15px;
+    margin: 20px 20px 20px 0px;
+    background-color: yellow;
     border: 6px solid black;
-    margin-right: 900px;
-    padding: 20px;
-    border-radius: 30px; 
+    border-radius: 30px;
+    width: 20%;
 }
 
-#Perfil{
+#Imagen{
+    width: 350px;
+    height: 350px;
+    margin: 15px 60px;
+    border: 10px solid white;
+    border-radius: 80px;
+    display: none;
+}
+
+.bloque{
     font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: white;
     border: 6px solid black;
-    margin-right: 100px;
+    margin-right: 500px;
     margin-top: 15px;
     padding: 20px;
     border-radius: 30px; 
 }
 
-#Formacion{
-    font-size: 20px;   
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: white;
-    border: 6px solid black;
-    margin-right: 900px;
-    margin-top: 15px;
-    padding: 20px;
-    border-radius: 30px; 
-}
-
-#Idiomas{
-    font-size: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: white;
-    border: 6px solid black;
-    margin-right: 900px;
-    margin-top: 15px;
-    padding: 20px;
-    border-radius: 20px; 
-}
-
-#Habilidades{
-    font-size: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: white;
-    border: 6px solid black;
-    margin-right: 900px;
-    margin-top: 15px;
-    padding: 20px;
-    border-radius: 30px; 
-}
 
 #objeto_lista{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
     font-size: 25px;
+    display: none;
 }
 
-#texto{
+.textolista{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    font-size: 25px;
+    font-size: 30px;
+    font-weight:900;
+    color:rgb(224, 1, 1);
 }
 
 h2{
-    color:indigo;
+    color:rgb(18, 79, 211);
     font-family: Verdana, Geneva, Tahoma, sans-serif;;
 }
- b{
-     font-size: 25px;
+b{
+     font-size: 24px;
  }
 
+.texto{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    font-weight: 500;
+}
 
+.espacio{
+    height: 10px;
+    width: 10px;
+}
+
+button{
+    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    font-weight: bolder;
+    color:rgb(3, 0, 1);
+    width: 35%;
+    margin: 20px 20px 20px 0px;
+    background-color: rgb(12, 168, 240);
+    border: 3px solid black;
+    border-radius: 30px;
+}
